--- a/package.json
+++ b/package.json
@@ -11,8 +11,17 @@
     "restart": "rm -rf node_modules/ package-lock.json && yarn install && npm install && yarn start --reset-cache"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.18.2",
+    "@walletconnect/encoding": "1.0.2",
+    "@walletconnect/react-native-compat": "^2.7.7",
+    "@web3modal/react-native": "1.0.0-alpha.5",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-native": "0.72.4",
+    "react-native-actions-sheet": "^0.8.29",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-get-random-values": "^1.8.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-svg": "^13.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
