publishing the first version of react native dapp using wallet connect modal to sign a message or transfer cryptomoney, should fix [react-native-compat: react-native.NetInfo is not available.]

--- a/package.json
+++ b/package.json
@@ -8,20 +8,25 @@
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
-    "restart": "rm -rf node_modules/ package-lock.json && yarn install && npm install && yarn start --reset-cache"
+    "restart": "rm -rf node_modules/ package-lock.json && yarn install && yarn start --reset-cache"
   },
   "dependencies": {
+    "@react-icons/all-files": "^4.1.0",
     "@react-native-async-storage/async-storage": "^1.18.2",
     "@walletconnect/encoding": "1.0.2",
     "@walletconnect/react-native-compat": "^2.7.7",
     "@web3modal/react-native": "1.0.0-alpha.5",
+    "babel-preset-react-native": "^4.0.1",
     "react": "18.2.0",
+    "react-icons": "^4.8.0",
     "react-native": "0.72.4",
     "react-native-actions-sheet": "^0.8.29",
-    "react-native-vector-icons": "^9.2.0",
+    "react-native-config": "^1.5.1",
+    "react-native-dotenv": "^3.4.9",
     "react-native-get-random-values": "^1.8.0",
     "react-native-modal": "^13.0.1",
-    "react-native-svg": "^13.8.0"
+    "react-native-svg": "^13.8.0",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
